# mercury-rs

./: .editorconfig  .gitignore  Cargo.toml  LICENSE-MIT  README.md  circle.yml
examples/cli/: Cargo.toml
examples/cli/src/: error.rs  main.rs
examples/reader-cli/src/: error.rs  main.rs
examples/rocket/: Cargo.toml
examples/rocket/src/: error.rs  main.rs  reader.rs
examples/rocket/static/: reader.css
examples/rocket/templates/: index.hbs
src/: article.rs  error.rs  lib.rs
